 1.0.6		[Enhancement] split MP3 funktion
			[Enhancement] Interface weiter optmiert
 1.0.7		[Enhancement] die erzeugten MP3 Dateien verfügen jetzt über Id3v2.3 Tag Informationen
			[Enhancement] Interface weiter optmiert
			[Enhancement] Error handler hinzugefügt
 1.0.8		[Bugfix] Hostname anstatt IP wird jetzt verwendet
 1.0.9		[Bugfix] Fehlendes Packt task-spooler hinzugefügt
 1.1.0		[Bugfix] fehlende Pakete hinzugefügt
 1.2.0		[Enhancement] Google durch Google Cloud T2S
			[Enhancement] Interface weiter optmiert
 1.2.1		[Enhancement]Interface handling optimiert
 1.2.2		[Enhancement] Microsoft Azure T2S hinzugefügt
			[Enhancement] Interface erweitert (inklusive Logging)
			[Enhancement] USB-Soundkarten Unterstützung
 1.3.0		[Bugfix] Fixed Cleanup TTS files
 1.3.1		[Bugfix] Fixed missing link
 1.6.0		[Enhancement] Voice Engines Pico/OSX durch ElevenLabs/Piper (Offline) ersetzt
			[Enhancement] Vorbereitung zur Interface Nutzung (mTLS mit Zertifikaten)
			[Enhancement] Stimmentest on-the-fly am PC
			[Enhancement] optimierte Installation
			[Enhancement] TTS Funktionen optimiert
			[Enhancement] Validierung der Kalender bei Eingabe der CalDAV-4-Lox Syntax
			[Enhancement] Syntax für Add-on's geändert
			[Enhancement] Logging optimiert
			[Enhancement] Multihandling API-key wenn mehrere TTS Engines genutzt werden
			[Bugfix] Fixed automatische Findung von Soundkarten inkl. technischer Details
			[Bugfix] Fixed addons
 1.6.1		[Bugfix] Voice Engines VoiceRSS gefixt
			[Bugfix] kleinere Optimierungen hinsichtlich Performance
			[Enhancement] Multilingualität (NL, IT, CZ, FR, EN, DE)
			[Enhancement] Kann auch auf VM installiert werden
			[Enhancement] Anpassung (Reduzierung) der Jingle Lautstärke über UI
			[Enhancement] Entwickler Informationen zur Nutzung des Interface bereitgestellt inkl. Beispieldateien zur Nutzung
			[Enhancement] Die function Calls sind auch über das Interface ausführbar
			[Enhancement] technisches Logging in RAM ausgelagert