@@ -505,23 +505,16 @@ TLS
     logp("OK","Detected server CN for ACL: $server_cn_acl");
   }
 my $acl = <<"ACL";
-# Auto-generated by Text2Speech Plugin (stable & permissive)
+# Auto-generated by Text2Speech Plugin
 
-# =====================================================================
+# =======================================================================
 # /etc/mosquitto/tts-aclfile
-# -- Base ACL (DO NOT EDIT MANUALLY) ----------------------------------
+# -- Base ACL (DO NOT EDIT MANUALLY) ------------------------------------
 # This block is static and created during setup. Dynamic entries will be
 # appended inside the AUTO-ACL section at runtime.
-# =====================================================================
+# =======================================================================
 
 ### BEGIN BASE-ACL ###
-
-# --- Bridge Clients (base CN) ---
-user $CLIENT_ID
-topic write tts-publish/#
-topic read  tts-subscribe/#
-topic write tts-subscribe/#
-topic read  tts-publish/#
 
 # --- T2S Master (CN = t2s.local) ---
 user $server_cn_acl
